testsuite/poke.pkl/add-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .+ 1t; /* { dg-error "invalid operand .*" } */
